--- a/src/css/homepage.css
+++ b/src/css/homepage.css
@@ -29,7 +29,7 @@ html {
 }
 
 .progress-bar {
-	height: 8px;
+	height: 3px;
 	background: #404040;
 	width: 0%
 }
@@ -43,32 +43,36 @@ html {
 }
 
 #navbar.navbar-collapse {
-	padding-top: 4px;
-	padding-bottom: 4px;
+	padding-top: 2px;
+	padding-bottom: 2px;
 	transition: padding-top .3s ease-in-out, padding-bottom .3s ease-in-out
 }
 
 .navbar-collapse {
-	background-color: #212121
+	background-color: #FFF
 }
 
 .nav-item {
 	display: inline-block;
 	font-family: miso, sans-serif;
-	color: #fff;
+	color: #222;
 	font-size: 1.75em;
 	transition: font-size .3s ease-in-out;
 	letter-spacing: .0125em;
 	padding: 0 10px 0 10px
 }
 
+.active-nav-item {
+	font-family: miso-bold, sans-serif;
+}
+
 #nav-items {
 	margin: 0 auto;
-	color: #fff
+	color: #222
 }
 
 #title-irminrics {
-	color: #fff;
+	color: #222;
 	font-size: 1.75em;
 	font-family: miso, sans-serif;
 	letter-spacing: .0125em;
@@ -98,9 +102,7 @@ html {
 	display: table;
 	width: 100%;
 	height: 1000px;
-	background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(../images/city-cars.gif);
-	background-size: cover;
-	background-attachment: fixed
+	background-color: #f4f4f4;
 }
 
 #intro-div {
@@ -108,97 +110,12 @@ html {
 	height: 30%;
 	margin: auto;
 	text-align: center;
-	color: #fff;
 	font-size: 20px
 }
 
 #main-intro {
 	vertical-align: middle;
 	display: table-cell
-}
-
-#cards-div {
-	font-size: 120px;
-	font-weight: 700;
-	width: 400px;
-	height: 250px;
-	margin: 80px auto;
-	border-radius: 10px;
-	perspective: 1400px
-}
-
-#about-me-div {
-	height: 1000px;
-	background-color: #212121;
-	padding-top: 150px
-}
-
-.about-me-box {
-	margin: 0 auto;
-	width: 100%;
-	height: 600px;
-	margin-top: 50px
-}
-
-#about-me-picture-box {
-	margin: 0 auto;
-	text-align: center
-}
-
-#about-me-picture {
-	width: 651px;
-	height: 614px
-}
-
-#about-me-description {
-	margin: 0 auto;
-	color: #fff;
-	width: 70%;
-	font-size: 16px
-}
-
-#about-me-description-box {
-	display: flex;
-	justify-content: center;
-	align-items: center
-}
-
-#second-background {
-	width: 100%;
-	height: 400px;
-	background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(../images/night-city-lights.gif);
-	background-size: cover;
-	background-attachment: fixed;
-	display: table
-}
-
-#about-me-content {
-	text-align: center;
-	margin: auto;
-	color: #fff;
-	display: table-cell;
-	vertical-align: middle
-}
-
-#about-me-title {
-	padding: 50px 25px 25px 25px;
-	font-size: 70px
-}
-
-#about-me-p {
-	font-size: 25px;
-	letter-spacing: 2px;
-	line-height: 28px;
-	color: #d2d2d2;
-	width: 70%;
-	margin: 0 auto
-}
-
-#experience-div {
-	width: 100%;
-	height: 1050px;
-	background-color: #dfdfdf;
-	padding-top: 150px
 }
 
 .row:after {
@@ -210,70 +127,6 @@ html {
 .column {
 	float: left;
 	width: 25%
-}
-
-#experience-diagram {
-	margin: 0 auto;
-	width: 100%;
-	height: 550px;
-	margin-top: 150px
-}
-
-.experience-box {
-	float: left;
-	height: 500px
-}
-
-.experience-icon {
-	margin-bottom: 20px
-}
-
-.experience-icons {
-	margin: 0 auto;
-	text-align: center
-}
-
-.experience-title {
-	font-weight: 700
-}
-
-.experience-description {
-	text-align: center
-}
-
-.etc {
-	font-size: 12px
-}
-
-.experience-info {
-	font-size: 15px;
-	margin: 0 auto;
-	width: 80%
-}
-
-.center {
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translateX(-50%) translateY(-50%)
-}
-
-#contact-div {
-	height: 950px;
-	width: 100%;
-	background-color: #212121;
-	padding-top: 150px
-}
-
-#back-to-top {
-	position: fixed;
-	bottom: 0;
-	right: 0;
-	margin: 20px
-}
-
-#btt-button {
-	color: #404040
 }
 
 .typeText {
@@ -290,19 +143,16 @@ html {
 
 .typeText .content {
 	display: inline;
-	color: #fff;
+	color: #222;
 	font-family: miso, sans-serif
 }
 
 .intro-description {
 	display: inline-block;
 	font-size: 1.5em;
-	width: 70%;
-	font-family: miso, sans-serif
-}
-
-.resume-btn {
-	border: 1px solid #fff
+	width: 60%;
+	font-family: miso, sans-serif;
+	color: #222;
 }
 
 ul {
@@ -315,12 +165,12 @@ li {
 }
 
 a {
-	color: #fff;
+	color: #222;
 	text-decoration: none
 }
 
 a:hover {
-	color: #fff;
+	color: #222;
 	text-decoration: none;
 	cursor: pointer
 }
@@ -331,7 +181,7 @@ a:hover {
 	height: 2px;
 	left: 50%;
 	position: absolute;
-	background: #fff;
+	background: #222;
 	transition: width .5s ease 0s, left .5s ease 0s;
 	width: 0
 }
@@ -344,454 +194,4 @@ a:hover:after {
 a.active:after {
 	width: 100%;
 	left: 0
-}
-
-.experience {
-	font-family: miso, sans-serif;
-	font-size: 3.5em;
-	margin: 0 auto;
-	text-align: center
-}
-
-.experience .letter {
-	display: inline-block;
-	line-height: 1em
-}
-
-.experience .text-wrapper {
-	position: relative;
-	display: inline-block;
-	padding-top: .1em;
-	padding-right: .05em;
-	padding-bottom: .15em
-}
-
-.experience .line {
-	opacity: 0;
-	position: absolute;
-	left: 0;
-	height: 3px;
-	width: 100%;
-	background-color: #212121
-}
-
-.experience .line1 {
-	top: 0
-}
-
-.experience .line2 {
-	bottom: 0
-}
-
-.contact {
-	font-family: miso, sans-serif;
-	font-size: 3.5em;
-	margin: 0 auto;
-	text-align: center;
-	color: #fff
-}
-
-.contact .letter {
-	display: inline-block;
-	line-height: 1em
-}
-
-.contact .text-wrapper {
-	position: relative;
-	display: inline-block;
-	padding-top: .1em;
-	padding-right: .05em;
-	padding-bottom: .15em
-}
-
-.contact .line {
-	opacity: 0;
-	position: absolute;
-	left: 0;
-	height: 3px;
-	width: 100%;
-	background-color: #fff
-}
-
-.contact .line1 {
-	top: 0
-}
-
-.contact .line2 {
-	bottom: 0
-}
-
-.about {
-	font-family: miso, sans-serif;
-	font-size: 3.5em;
-	margin: 0 auto;
-	text-align: center;
-	color: #fff
-}
-
-.about .letter {
-	display: inline-block;
-	line-height: 1em
-}
-
-.about .text-wrapper {
-	position: relative;
-	display: inline-block;
-	padding-top: .1em;
-	padding-right: .05em;
-	padding-bottom: .15em
-}
-
-.about .line {
-	opacity: 0;
-	position: absolute;
-	left: 0;
-	height: 3px;
-	width: 100%;
-	background-color: #fff
-}
-
-.about .line1 {
-	top: 0
-}
-
-.about .line2 {
-	bottom: 0
-}
-
-.awards {
-	font-family: miso, sans-serif;
-	font-size: 3.5em;
-	margin: 0 auto;
-	text-align: center;
-	color: #fff
-}
-
-.awards .letter {
-	display: inline-block;
-	line-height: 1em
-}
-
-.awards .text-wrapper {
-	position: relative;
-	display: inline-block;
-	padding-top: .1em;
-	padding-right: .05em;
-	padding-bottom: .15em
-}
-
-.awards .line {
-	opacity: 0;
-	position: absolute;
-	left: 0;
-	height: 3px;
-	width: 100%;
-	background-color: #fff
-}
-
-.awards .line1 {
-	top: 0
-}
-
-.awards .line2 {
-	bottom: 0
-}
-
-#awards-box {
-	margin-top: 150px;
-	height: 700px;
-	width: 100%
-}
-
-.awards-row {
-	height: 50%;
-	margin: 0 auto;
-	text-align: center;
-	margin-top: 50px
-}
-
-#awards-div {
-	padding-top: 100px;
-	height: 1100px;
-	background-color: #212121
-}
-
-.award-box {
-	border-radius: 25px;
-	border: 2px solid #fff;
-	margin: 0 auto;
-	height: 320px;
-	width: 400px
-}
-
-.gold-medal {
-	margin: 30px 10px 10px 10px;
-	height: 100px;
-	width: 90px;
-	background-image: url(../images/gold-medal.png);
-	background-size: contain;
-	background-repeat: no-repeat
-}
-
-.scroll {
-	margin: 30px 10px 10px 10px;
-	height: 100px;
-	width: 90px;
-	background-image: url(../images/scroll.png);
-	background-size: contain;
-	background-repeat: no-repeat
-}
-
-.csit-scholarship {
-	margin: 30px 10px 10px 10px;
-	height: 100px;
-	width: 90px;
-	background-image: url(../images/csit-scholarship.png);
-	background-size: contain;
-	background-repeat: no-repeat
-}
-
-.nus-scholarship {
-	margin: 30px 10px 10px 10px;
-	height: 100px;
-	width: 90px;
-	background-image: url(../images/nus-scholarship.png);
-	background-size: contain;
-	background-repeat: no-repeat
-}
-
-.award-content {
-	font-size: 15px;
-	margin: 0 auto;
-	color: #fff
-}
-
-.award-title {
-	font-weight: 700
-}
-
-.award-description {
-	margin: 10px
-}
-
-#contact-form {
-	margin: 0 auto;
-	margin-top: 120px;
-	width: 55%;
-	height: 550px
-}
-
-#copyright {
-	text-align: center;
-	font-size: 15px;
-	color: #fff
-}
-
-.contact-icon {
-	color: grey;
-	margin-top: -5px
-}
-
-.md-form .prefix.active {
-	color: #fff
-}
-
-.md-form input[type=text]+label {
-	color: grey!important
-}
-
-.md-form input[type=text] {
-	box-shadow: 0 1px 0 0 grey!important;
-	border-bottom: 1px solid grey!important
-}
-
-.md-form input[type=text]:focus+label {
-	color: #fff!important
-}
-
-.md-form input[type=text]:focus {
-	box-shadow: 0 1px 0 0 #fff!important;
-	border-bottom: 1px solid #fff!important
-}
-
-.contact-box {
-	margin: 50px 0 50px 0
-}
-
-.contact-label {
-	margin-top: -15px
-}
-
-.md-form input[type=text] {
-	color: #fff
-}
-
-.md-form textarea {
-	border-top: 0;
-	border-left: 0;
-	border-right: 0;
-	color: #fff
-}
-
-textarea {
-	color: #fff
-}
-
-.md-form textarea+label {
-	color: grey!important
-}
-
-.md-form textarea:focus+label {
-	color: #fff!important
-}
-
-.md-form textarea:focus {
-	box-shadow: 0 1px 0 0 #fff!important;
-	border-bottom: 1px solid #fff!important
-}
-
-.md-form textarea {
-	box-shadow: 0 1px 0 0 grey!important;
-	border-bottom: 1px solid grey!important
-}
-
-#contact-submit {
-	text-align: center
-}
-
-#btn-submit {
-	color: #fff!important;
-	border: 1px solid #fff
-}
-
-@media only screen and (max-width:457px) {
-	#experience-div {
-		height: 2600px
-	}
-	#intro-background {
-		background: #000
-	}
-	#second-background {
-		background: #000
-	}
-	#experience-diagram {
-		height: 2400px
-	}
-}
-
-@media (min-width:457px) and (max-width:576px) {
-	#experience-div {
-		height: 2800px
-	}
-	#experience-diagram {
-		height: 2400px
-	}
-}
-
-@media only screen and (max-width:695px) {
-	#nav-container-right {
-		display: none
-	}
-}
-
-@media (min-width:576px) and (max-width:767px) {
-	#experience-div {
-		height: 1400px
-	}
-	#experience-diagram {
-		height: 1000px
-	}
-}
-
-@media only screen and (max-width:670px) {
-	.typeText {
-		font-size: 2.15em
-	}
-	.intro-description {
-		font-size: .95em
-	}
-}
-
-@media (min-width:670px) and (max-width:721px) {
-	.typeText {
-		font-size: 3.75em
-	}
-	.intro-description {
-		font-size: 1.05em
-	}
-}
-
-@media (min-width:721px) and (max-width:895px) {
-	.typeText {
-		font-size: 4em
-	}
-	.intro-description {
-		font-size: 1.2em
-	}
-}
-
-@media (min-width:895px) and (max-width:1082px) {
-	.typeText {
-		font-size: 5em
-	}
-	.intro-description {
-		font-size: 1.2em
-	}
-}
-
-@media only screen and (max-width:585px) {
-	#about-me-div {
-		height: 1600px
-	}
-	#about-me-picture {
-		width: 373px;
-		height: 353px
-	}
-}
-
-@media (min-width:768px) and (max-width:900px) {
-	#experience-diagram {
-		height: 630px
-	}
-}
-
-@media (min-width:585px) and (max-width:847px) {
-	#about-me-div {
-		height: 1400px
-	}
-}
-
-@media (min-width:847px) and (max-width:992px) {
-	#about-me-div {
-		height: 1200px
-	}
-}
-
-@media (min-width:473px) and (max-width:1069px) {
-	#about-me-picture {
-		width: 456px;
-		height: 429px
-	}
-}
-
-@media (min-width:1069px) and (max-width:1300px) {
-	#about-me-picture {
-		width: 586px;
-		height: 552px
-	}
-}
-
-@media only screen and (max-width:1484px) {
-	.content {
-		line-height: 90px
-	}
-}
-
-@media only screen and (max-width:991.5px) {
-	.awards-row {
-		height: 800px
-	}
-	#awards-div {
-		height: 2200px
-	}
 }
