--- a/src/css/homepage.css
+++ b/src/css/homepage.css
@@ -195,3 +195,47 @@ a.active:after {
 	width: 100%;
 	left: 0
 }
+
+.button {
+	margin: 0 auto;
+	font-weight: 500;
+	padding: 10px 0 10px 0;
+	text-align: center;
+	transition: all 0.4s;
+	width: fit-content;
+	border-bottom: 3px solid #111;
+}
+
+.button:hover {
+	color: #222;
+	text-decoration: none;
+	cursor: pointer;
+	border-bottom: 8px solid #111;
+}
+
+#projects-div {
+	width: 100%;
+	height: 30%;
+	padding: 125px 0 125px 0;
+	margin: auto;
+	text-align: center;
+	font-size: 20px
+}
+
+#projects-header {
+	margin: 0 auto;
+	width: 50%;
+	float: left;
+	font-size: 1.2em;
+	font-family: miso, sans-serif;
+}
+
+#projects-header::before {
+	content: "";
+	display: inline-block;
+	width: 50px;
+	height: 1px;
+	background: #555;
+	vertical-align: middle;
+	margin-right: 10px;
+	}
