--- a/src/css/homepage.css
+++ b/src/css/homepage.css
@@ -1,241 +1,306 @@
 ﻿@font-face {
-	font-family: miso-bold;
-	src: url(../fonts/miso-bold/miso-bold-webfont.eot);
-	src: url(../fonts/miso-bold/miso-bold-webfont.eot?#iefix) format('embedded-opentype'), url(../fonts/miso-bold/miso-bold-webfont.woff2) format('woff2'), url(../fonts/miso-bold/miso-bold-webfont.woff) format('woff'), url(../fonts/miso-bold/miso-bold-webfont.ttf) format('truetype'), url(../fonts/miso-bold/miso-bold-webfont.svg#svgFontName) format('svg')
+    font-family: miso-bold;
+    src: url(../fonts/miso-bold/miso-bold-webfont.eot);
+    src: url(../fonts/miso-bold/miso-bold-webfont.eot?#iefix) format('embedded-opentype'), url(../fonts/miso-bold/miso-bold-webfont.woff2) format('woff2'), url(../fonts/miso-bold/miso-bold-webfont.woff) format('woff'), url(../fonts/miso-bold/miso-bold-webfont.ttf) format('truetype'), url(../fonts/miso-bold/miso-bold-webfont.svg#svgFontName) format('svg')
 }
 
 @font-face {
-	font-family: miso;
-	src: url(../fonts/miso-regular/miso-regular-webfont.eot);
-	src: url(../fonts/miso-regular/miso-regular-webfont.eot?#iefix) format('embedded-opentype'), url(../fonts/miso-regular/miso-regular-webfont.woff2) format('woff2'), url(../fonts/miso-regular/miso-regular-webfont.woff) format('woff'), url(../fonts/miso-regular/miso-regular-webfont.ttf) format('truetype'), url(../fonts/miso-regular/miso-regular-webfont.svg#svgFontName) format('svg')
+    font-family: miso;
+    src: url(../fonts/miso-regular/miso-regular-webfont.eot);
+    src: url(../fonts/miso-regular/miso-regular-webfont.eot?#iefix) format('embedded-opentype'), url(../fonts/miso-regular/miso-regular-webfont.woff2) format('woff2'), url(../fonts/miso-regular/miso-regular-webfont.woff) format('woff'), url(../fonts/miso-regular/miso-regular-webfont.ttf) format('truetype'), url(../fonts/miso-regular/miso-regular-webfont.svg#svgFontName) format('svg')
 }
 
 body,
 html {
-	width: 100%;
-	height: 100%;
-	margin: 0;
-	padding: 0;
-	-ms-overflow-style: none;
-	scrollbar-width: none;
-	scroll-behavior: smooth
+    width: 100%;
+    height: 100%;
+    min-height: 100% !important;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    scroll-behavior: smooth
 }
 
 .header {
-	position: fixed;
-	top: 65px;
-	z-index: 1;
-	width: 100%
+    position: fixed;
+    top: 65px;
+    z-index: 1;
+    width: 100%
 }
 
 .progress-bar {
-	height: 3px;
-	background: #404040;
-	width: 0%
+    height: 3px;
+    background: #404040;
+    width: 0%
 }
 
 #navbar {
-	padding-top: 10px;
-	padding-bottom: 10px;
-	z-index: 1;
-	box-shadow: none;
-	transition: padding-top .3s ease-in-out, padding-bottom .3s ease-in-out
+    padding-top: 10px;
+    padding-bottom: 10px;
+    z-index: 1;
+    box-shadow: none;
+    transition: padding-top .3s ease-in-out, padding-bottom .3s ease-in-out
 }
 
 #navbar.navbar-collapse {
-	padding-top: 2px;
-	padding-bottom: 2px;
-	transition: padding-top .3s ease-in-out, padding-bottom .3s ease-in-out
+    padding-top: 2px;
+    padding-bottom: 2px;
+    transition: padding-top .3s ease-in-out, padding-bottom .3s ease-in-out
 }
 
 .navbar-collapse {
-	background-color: #FFF
+    background-color: #FFF
 }
 
 .nav-item {
-	display: inline-block;
-	font-family: miso, sans-serif;
-	color: #222;
-	font-size: 1.75em;
-	transition: font-size .3s ease-in-out;
-	letter-spacing: .0125em;
-	padding: 0 10px 0 10px
+    display: inline-block;
+    font-family: miso, sans-serif;
+    color: #222;
+    font-size: 1.75em;
+    transition: font-size .3s ease-in-out;
+    letter-spacing: .0125em;
+    padding: 0 10px 0 10px
 }
 
 .active-nav-item {
-	font-family: miso-bold, sans-serif;
+    font-family: miso-bold, sans-serif;
 }
 
 #nav-items {
-	margin: 0 auto;
-	color: #222
+    margin: 0 auto;
+    color: #222
 }
 
 #title-irminrics {
-	color: #222;
-	font-size: 1.75em;
-	font-family: miso, sans-serif;
-	letter-spacing: .0125em;
-	padding: 8px 0 8px 0
+    color: #222;
+    font-size: 1.75em;
+    font-family: miso, sans-serif;
+    letter-spacing: .0125em;
+    padding: 8px 0 8px 0
 }
 
 .icon {
-	position: relative;
-	width: 44px;
-	height: 44px;
-	margin-right: 8px;
-	display: inline-block;
-	background-size: cover
+    position: relative;
+    width: 44px;
+    height: 44px;
+    margin-right: 8px;
+    display: inline-block;
+    background-size: cover
 }
 
 .irminrics-dp {
-	background-image: url(../images/irminrics-dp.png);
-	margin-left: 8px;
+    background-image: url(../images/irminrics-dp.png);
+    margin-left: 8px;
     float: left
 }
 
 ::-webkit-scrollbar {
-	display: none
+    display: none
 }
 
 #intro-background {
-	display: table;
-	width: 100%;
-	height: 1000px;
-	background-color: #f4f4f4;
+    display: table;
+    width: 100%;
+    height: 1000px;
+    background-color: #f4f4f4;
 }
 
 #intro-div {
-	width: 100%;
-	height: 30%;
-	margin: auto;
-	text-align: center;
-	font-size: 20px
+    width: 100%;
+    height: 30%;
+    margin: auto;
+    text-align: center;
+    font-size: 20px
 }
 
 #main-intro {
-	vertical-align: middle;
-	display: table-cell
+    vertical-align: middle;
+    display: table-cell
 }
 
 .row:after {
-	content: "";
-	display: table;
-	clear: both
+    content: "";
+    display: table;
+    clear: both
 }
 
 .column {
-	float: left;
-	width: 25%
+    float: left;
+    width: 25%
 }
 
 .typeText {
-	width: 85%;
-	text-align: center;
-	line-height: 50px;
-	height: 70px;
-	font-size: 6em;
-	top: 0;
-	bottom: 0;
-	margin: auto;
-	margin-bottom: 40px
+    width: 85%;
+    text-align: center;
+    line-height: 50px;
+    height: 70px;
+    font-size: 6em;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    margin-bottom: 40px
 }
 
 .typeText .content {
-	display: inline;
-	color: #222;
-	font-family: miso, sans-serif
+    display: inline;
+    color: #222;
+    font-family: miso, sans-serif
 }
 
 .intro-description {
-	display: inline-block;
-	font-size: 1.5em;
-	width: 60%;
-	font-family: miso, sans-serif;
-	color: #222;
+    display: inline-block;
+    font-size: 1.5em;
+    width: 60%;
+    font-family: miso, sans-serif;
+    color: #222;
 }
 
 ul {
-	display: table
+    display: table
 }
 
 li {
-	display: table-cell;
-	position: relative
+    display: table-cell;
+    position: relative
 }
 
 a {
-	color: #222;
-	text-decoration: none
+    color: #222;
+    text-decoration: none
 }
 
 a:hover {
-	color: #222;
-	text-decoration: none;
-	cursor: pointer
+    color: #222;
+    text-decoration: none;
+    cursor: pointer
 }
 
 .nav-link:after {
-	content: "";
-	display: block;
-	height: 2px;
-	left: 50%;
-	position: absolute;
-	background: #222;
-	transition: width .5s ease 0s, left .5s ease 0s;
-	width: 0
+    content: "";
+    display: block;
+    height: 2px;
+    left: 50%;
+    position: absolute;
+    background: #222;
+    transition: width .5s ease 0s, left .5s ease 0s;
+    width: 0
 }
 
 a:hover:after {
-	width: 100%;
-	left: 0
+    width: 100%;
+    left: 0
 }
 
 a.active:after {
-	width: 100%;
-	left: 0
+    width: 100%;
+    left: 0
+}
+
+.center {
+    margin: 0 auto;
 }
 
 .button {
-	margin: 0 auto;
-	font-weight: 500;
-	padding: 10px 0 10px 0;
-	text-align: center;
-	transition: all 0.4s;
-	width: fit-content;
-	border-bottom: 3px solid #111;
+    font-family: "Roboto";
+    font-weight: 500;
+    padding: 15px 0 10px 0;
+    text-align: center;
+    transition: all 0.4s;
+    width: fit-content;
+    border-bottom: 3px solid #111;
 }
 
 .button:hover {
-	color: #222;
-	text-decoration: none;
-	cursor: pointer;
-	border-bottom: 8px solid #111;
+    color: #222;
+    text-decoration: none;
+    cursor: pointer;
+    border-bottom: 10px solid #111;
 }
 
 #projects-div {
-	width: 100%;
-	height: 30%;
-	padding: 125px 0 125px 0;
-	margin: auto;
-	text-align: center;
-	font-size: 20px
+    display: block;
+    overflow: auto;
+    width: 100%;
+    padding: 138px 0 138px 0;
+    margin: auto;
+    text-align: center;
+    font-size: 20px
 }
 
-#projects-header {
-	margin: 0 auto;
-	width: 50%;
-	float: left;
-	font-size: 1.2em;
-	font-family: miso, sans-serif;
+#projects-div-header {
+    width: 100%;
+    letter-spacing: 01px;
+    font-size: 1.1em;
+    font-family: miso, sans-serif;
+    margin: 0 auto;
+    text-align: left;
 }
 
-#projects-header::before {
-	content: "";
-	display: inline-block;
-	width: 50px;
-	height: 1px;
-	background: #555;
-	vertical-align: middle;
-	margin-right: 10px;
-	}
+#projects-div-header::before {
+    content: "";
+    display: inline-block;
+    width: 30px;
+    height: 1px;
+    background: #555;
+    vertical-align: middle;
+    margin-right: 10px;
+}
+
+.projects-container {
+    padding-top: 100px;
+}
+
+.projects-container-wrapper {
+    width: 90%;
+    margin: 0 auto;
+    max-width: 1100px;
+    height: 100%;
+}
+
+.projects-text {
+    float: left;
+    font-family: miso, sans-serif;
+    width: 40%;
+    text-align: justify;
+    text-justify: inter-word;
+    font-size: 1.15em;
+    transition: font-size .3s ease-in-out;
+}
+
+.projects-header {
+    font-family: miso-bold, sans-serif;
+    font-size: 1.9em;
+    font-weight: bolder;
+}
+
+.projects-description {
+    color: #888;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.projects-badge {
+    font-family: miso-bold, sans-serif;
+    color: white;
+    padding: 5px 15px;
+    width: fit-content;
+    border-radius: 28px;
+    margin-right: 10px;
+    background-color: #F05138;
+}
+
+.projects-button {
+    margin-top: 30px;
+    font-size: 0.8em;
+}
+
+.projects-image {
+    width: 60%;
+    float: left;
+}
+
+.image {
+    padding: 0 20px 0 20px;
+}
