--- a/src/css/homepage.css
+++ b/src/css/homepage.css
@@ -68,6 +68,7 @@ html {
     font-family: miso-bold, sans-serif;
 }
 
+
 #nav-items {
     margin: 0 auto;
     color: #222
@@ -166,14 +167,12 @@ li {
     position: relative
 }
 
-a {
+.nav-link {
     color: #222;
-    text-decoration: none
 }
 
-a:hover {
+.nav-link:hover {
     color: #222;
-    text-decoration: none;
     cursor: pointer
 }
 
@@ -188,12 +187,7 @@ a:hover {
     width: 0
 }
 
-a:hover:after {
-    width: 100%;
-    left: 0
-}
-
-a.active:after {
+.nav-link:hover:after {
     width: 100%;
     left: 0
 }
@@ -223,7 +217,7 @@ a.active:after {
     display: block;
     overflow: auto;
     width: 100%;
-    padding: 138px 0 138px 0;
+    padding: 130px 0 70px 0;
     margin: auto;
     text-align: center;
     font-size: 20px
@@ -249,18 +243,20 @@ a.active:after {
 }
 
 .projects-container {
+    min-height: 100px;
+    overflow: hidden;
     padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 .container-wrapper {
-    width: 90%;
+    width: 75%;
     margin: 0 auto;
     max-width: 1100px;
     height: 100%;
 }
 
 .projects-text {
-    float: left;
     font-family: miso, sans-serif;
     width: 40%;
     text-align: justify;
@@ -296,12 +292,19 @@ a.active:after {
 }
 
 .projects-image {
-    width: 60%;
+    width: 50%;
+}
+
+.left {
     float: left;
 }
 
+.right {
+    float: right;
+}
+
 .projects-image img {
-    padding: 0 20px 0 20px;
+    padding: 0 25px 0 25px;
     -webkit-animation-delay: 0.25s !important;
     animation-delay: 0.25s !important;
     -webkit-transition: all 0.65s;
@@ -332,6 +335,7 @@ a.active:after {
 #contact {
     font-family: miso-bold, sans-serif;
     font-size: 3.25em;
+    color: black;
 }
 
 #contact:hover {
@@ -339,7 +343,7 @@ a.active:after {
 }
 
 .footer-div {
-    padding: 58px 0 58px 0;
+    padding-bottom: 58px;
     width: 55%;
 }
 
