--- a/src/css/homepage.css
+++ b/src/css/homepage.css
@@ -64,10 +64,10 @@ html {
     padding: 0 10px 0 10px
 }
 
+
 .active-nav-item {
     font-family: miso-bold, sans-serif;
 }
-
 
 #nav-items {
     margin: 0 auto;
@@ -190,6 +190,22 @@ li {
 .nav-link:hover:after {
     width: 100%;
     left: 0
+}
+
+.white-text {
+    color: white;
+}
+
+.white-text:after {
+    background: white;
+}
+
+.black-text {
+    color: #222;
+}
+
+.black-text:hover {
+    color: #222;
 }
 
 .center {
@@ -360,3 +376,14 @@ li {
 .social-icons {
     padding-right: 10px;
 }
+
+.wallpaper {
+    display: table;
+    width: 100%;
+    height: 350px;
+    background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(../images/city-cars.gif);
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: 0 480%;
+}
+
