--- a/src/css/homepage.css
+++ b/src/css/homepage.css
@@ -504,3 +504,26 @@ li {
 .about-badge-div {
     width: 85%;
 }
+
+.hidden {
+
+}
+
+@media only screen and (max-width:682px) {
+    #contact-nav {
+        display: none;
+    }
+}
+
+@media only screen and (max-width:870px) {
+    .typeText {
+		font-size: 3.5em
+	}
+}
+
+@media (min-width:870px) and (max-width:1100px) {
+    .typeText {
+		font-size: 5em
+	}
+}
+
