--- a/src/css/homepage.css
+++ b/src/css/homepage.css
@@ -553,24 +553,18 @@ li {
 	}
 }
 
-@media only screen and (max-width:905px) {
-    .wallpaper {
-        background: white;
-    }
-
-    #title-irminrics {
-        color: #222;
-    }
-
-    .nav-item {
-        color: #222;
-    }
-
-}
-
 @media (min-width:870px) and (max-width:1100px) {
     .typeText {
 		font-size: 5em
 	}
 }
 
+@media only screen and (max-width:905px) {
+    .wallpaper {
+        display: none;
+    }
+
+    .progress-bar {
+        display: block;
+    }
+}
