--- a/src/css/homepage.css
+++ b/src/css/homepage.css
@@ -517,31 +517,35 @@ li {
     #portfolio-nav {
         display: none;
     }
-
     #contact-nav {
         display: none;
     }
-
     .typeText {
-		font-size: 2.2em;
+        font-size: 2.2em;
         margin-bottom: 20px;
-	}
-    
+    }
     .intro-description {
         font-size: 1.1em;
     }
-
     .button {
         font-size: 15px;
     }
-
     .nav-item {
         font-size: 1.5em;
     }
-
     #title-irminrics {
         font-size: 1.5em;
         line-height: 48px;
+    }
+    .description-picture {
+        transform: scale(0.6, 0.6);
+        -ms-transform: scale(0.6, 0.6);
+        -webkit-transform: scale(0.6, 0.6);
+    }
+
+    .description-text {
+        font-size: 1em;
+        padding-top: -50px;
     }
 }
 
@@ -549,7 +553,6 @@ li {
     #contact {
         font-size: 2.6em;
     }
-
     .footer-div {
         width: 100%
     }
@@ -557,22 +560,49 @@ li {
 
 @media (min-width:682px) and (max-width:870px) {
     .typeText {
-		font-size: 3.5em
-	}
+        font-size: 3.5em
+    }
 }
 
 @media (min-width:870px) and (max-width:1100px) {
     .typeText {
-		font-size: 5em
-	}
+        font-size: 5em
+    }
 }
 
 @media only screen and (max-width:905px) {
     .wallpaper {
         display: none;
     }
-
     .progress-bar {
         display: block;
     }
+    .description-div {
+        padding-top: 40px;
+    }
 }
+
+@media (min-width:682px) and (max-width:905px) {
+    .description-picture {
+        transform: scale(0.8, 0.8);
+        -ms-transform: scale(0.8, 0.8);
+        -webkit-transform: scale(0.8, 0.8);
+    }
+}
+
+@media (min-width:682px) and (max-width:1200px) {
+    .description-picture {
+        padding: 0;
+        padding-bottom: 50px;
+    }
+}
+
+
+/* @media only screen and (max-width:1325px) {
+    .projects-container {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+        flex-direction: column-reverse;
+    }
+} */
