--- a/src/css/homepage.css
+++ b/src/css/homepage.css
@@ -285,7 +285,7 @@ li {
 }
 
 .container-wrapper {
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
     max-width: 1100px;
     height: 100%;
@@ -627,18 +627,62 @@ li {
     }
 }
 
+@media only screen and (max-width:1325px) {
+    .container-wrapper {
+        width: 85%;
+    }
+}
 
+@media (min-width:840px) and (max-width:1250px) {
+    .image {
+        width: 50%;
+        height: 50%;
+        object-fit: cover;
+        overflow: hidden;
+    }
+}
 
+@media only screen and (max-width:1010px) {
+    .section-header {
+        font-size: 1.8em;
+    }
 
-/* @media only screen and (max-width:1325px) {
+    .description {
+        font-size: 0.9em;
+    }
+}
+
+@media only screen and (max-width:1010px) {
+    .button {
+        font-size: 15px;
+    }
+}
+
+@media only screen and (max-width:840px) {
     .projects-container {
         -webkit-box-orient: vertical;
         -webkit-box-direction: reverse;
         -ms-flex-direction: column-reverse;
         flex-direction: column-reverse;
+        display: flex;
     }
 
-    flex-direction: column;
-    display: flex;
-} */
+    .projects-image {
+        width: 100%;
+    }
+
+    .image {
+        height: 50%;
+        width: 50%;
+        object-fit: cover;
+        overflow: hidden;
+    }
+
+    .projects-text {
+        padding-top: 20px;
+        width: 100%;
+    }
+}
+
+
 
